--- a/app/assets/stylesheets/landing_pages.scss
+++ b/app/assets/stylesheets/landing_pages.scss
@@ -1,3 +1,19 @@
-// Place all the styles related to the landing_pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.cover
+{
+    background-image: asset_url('hacking.jpg');
+    
+  height: 700px;
+  width: 100%;
+  background-size: cover;
+
+  
+}
+.text 
+{ 
+
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+  
+}
