--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,2 +1,41 @@
-<h1>LandingPages#index</h1>
-<p>Find me in app/views/landing_pages/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+ 
+  <body>
+  <header>
+  <nav class="navbar navbar-nav bg-dark"> 
+     <h1 class="text-primary"> The Hacking Project </h1>
+   </nav> 
+
+ </header>
+  <div class="cover">
+    <div class="text">
+   <h1> Apprends a coder </h1>
+   
+   <h2> Gratuitement, en 3 mois </h2>
+   
+   <p> Tu va apprendre HTML, CSS, Ruby, Rails, JavaScript et biens plus encore ! </p>
+   <h1>Get My Awesome News Letter</h1>
+   <p>Give me your email and keep up to date on my cat's thoughts.</p>
+   <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
+      <%= email_field(:email, :address, {id: "email", placeholder: "email address"}) %>
+      <%= submit_tag("Sign me up!") %>
+   <% end %>
+   
+     </div>
+   </div>
+
+   
+  <footer>
+    <nav class="navbar-nav bg-dark">
+    <ul class="list-inline">
+    <li class="list-inline-item"> <a href="https://www.facebook.com/thehackingproject/">Facebook</a></li>
+    <li class="list-inline-item"><a href="https://twitter.com/the_hacking_pro">Twitter</a></li>
+    <li class="list-inline-item"><a href="https://fr.linkedin.com/company/the-hacking-project">Linkedin</a></li>
+  </ul>
+    </nav>
+  </footer>
+  </body>
+
+  
+</html>
