--- a/app/views/emailapi/index.html.erb
+++ b/app/views/emailapi/index.html.erb
@@ -4,3 +4,6 @@
    <%= email_field(:email, :address, {id: "email", placeholder: "email address"}) %>
    <%= submit_tag("Sign me up!") %>
 <% end %>
+
+<p>This a standard page, you can see others :</p>
+<a href=<%= xXnicobgdu44Xx_path %>>Nico's one</a>
