--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -15,8 +15,7 @@
    <h2> Gratuitement, en 3 mois </h2>
    
    <p> Tu va apprendre HTML, CSS, Ruby, Rails, JavaScript et biens plus encore ! </p>
-   <h1>Get My Awesome News Letter</h1>
-   <p>Give me your email and keep up to date on my cat's thoughts.</p>
+   <h3>Inscrivez-vous à notre newsletter !</h3>
    <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
       <%= email_field(:email, :address, {id: "email", placeholder: "email address"}) %>
       <%= submit_tag("Sign me up!") %>
