--- a/app/views/landing_pages/index2.html.erb
+++ b/app/views/landing_pages/index2.html.erb
@@ -30,9 +30,8 @@
 
     <div class="page-background">
         <div class="cta container rounded text-center text-white">
-            <h1>THP </br>
-            Pour les entrepreneurs / developpeurs / growthhackers de demain </h1></br>
-            <p class="lead p-3">
+            <h1>The Hacking Project </h1>
+            <h2>Pour les entrepreneurs / developpeurs / growthhackers de demain </h2>
                 
                 Commence a coder pour : </br>
                 - concretiser / accelerer / pimper tes projets</br>
