view bertyn a moitié fini

--- a/app/views/landing_pages/index3.html.erb
+++ b/app/views/landing_pages/index3.html.erb
@@ -31,7 +31,7 @@
     </header>
     
     <div> Si vous etes intéresser par le codage  ou vous avez envie de créer un site pour votre association/entreprise, vous etes les bienvenu chez moi 
-     <div class="cover">
+     <div >
     <div class="text">
    <h1> Apprends a coder </h1>
    
