--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,9 @@
  *= require_tree .
  *= require_self
  */
-@import "bootstrap";
+
+
+
+ @import "bootstrap";
+ @import "components/*";
+ @import "pages/*";
