--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124055473-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124055473-1');
+</script>
+
+  </head>
     <title>HackingPro</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
