--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html>
- 
-  <body>
   <header>
-  <nav class="navbar navbar-nav bg-dark"> 
+  <nav class="navbar navbar-nav bg-dark">
      <h1 class="text-primary"> The Hacking Project </h1>
-   </nav> 
+   </nav>
 
  </header>
-  <div class="cover">
+ <div class="wrapper">
+  <div class="cover module-cover fullscreen text-center" >
     <div class="text">
    <h1> Apprends a coder </h1>
-   
+
    <h2> Gratuitement, en 3 mois </h2>
-   
+
    <p> Tu va apprendre HTML, CSS, Ruby, Rails, JavaScript et biens plus encore ! </p>
    <h3>Inscrivez-vous à notre newsletter !</h3>
    <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
       <%= email_field(:email, :address, {id: "email", placeholder: "email address"}) %>
       <%= submit_tag("Sign me up!") %>
    <% end %>
-   
+
      </div>
    </div>
+ </div>
 
-   
+
   <footer>
     <nav class="navbar-nav bg-dark">
     <ul class="list-inline">
@@ -34,7 +32,12 @@
   </ul>
     </nav>
   </footer>
-  </body>
+  <!-- To top button--><a class="scroll-top" href="#top"><i class="fas fa-angle-up"></i></a>
 
-  
-</html>
+  <!-- Scripts-->
+  <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/custom/popper.min.js"></script>
+  <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
+  <script src="assets/js/custom/plugins.min.js"></script>
+  <script src="assets/js/custom/custom.min.js"></script>
