--- a/app/views/landing_pages/index3.html.erb
+++ b/app/views/landing_pages/index3.html.erb
@@ -4,7 +4,7 @@
                     <div id="banner2" ></div>
              </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand" href="#"><img class="logo" src="asset/thp.png" >The Hacking Project</a>
+        <a class="navbar-brand" href="#"><%= image_tag 'thp.png',class:"logo" %> The Hacking Project</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
