--- a/app/views/emailapi/index.html.erb
+++ b/app/views/emailapi/index.html.erb
@@ -38,8 +38,10 @@
             <div class="row">
               <div class="col-lg-4 col-md-6 m-auto">
                   <div class="m-b-20 text-center">
-                    <h3>Get My Awesome News Letter</h3>
-                    <p>Give me your email and keep up to date on my cat's thoughts.</p>
+                    <h4> Apprends à coder </h4>
+                    <h4> Gratuitement, en 3 mois </h4>
+                    <p> Tu va apprendre HTML, CSS, Ruby, Rails, JavaScript et biens plus encore ! </p>
+                    <h5>Inscrivez-vous à notre newsletter !</h5>
                     <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
                     <div class="form-group">
                        <%= email_field(:email, :address, {class: "form-control",id: "email", placeholder: "email address"}) %>
@@ -48,7 +50,7 @@
                     <% end %>
 
                     <p>This a standard page, you can see others :</p>
-                    <a href=<%= xXnicobgdu44Xx_path %>>Nico's one</a>
+                    <a href="/index">Nico's one</a>
                   </div>
 
                 </div>
