--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -11,7 +11,7 @@
  <div class="wrapper">
   <div class="cover module-cover fullscreen text-center" >
     <div class="text">
-   <h1> Apprends à coder </h1>
+   <h1> Toi Nantais, Apprends à coder !   </h1>
 
    <h2> Gratuitement, en 3 mois </h2>
 
