--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
- 
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124055473-1"></script>
 <script>
@@ -12,7 +12,11 @@
   gtag('config', 'UA-124055473-1');
 </script>
 
-  
+    <meta name="description" content="The Hacking Project is a free programming school...">
+    <meta name="keywords" content="THP,HTML,CSS,Ruby,JavaScript,formation,developper">
+    <meta name="author" content="Bertyn,Lionel,Mohamed,Nicolas,Florian">
+    <meta name="title" content="The Hacking Project NewsLetter">
+
     <title>HackingPro</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
