--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,5 +37,13 @@
       <div class="alert alert-<%= name %>"><%= msg %></div>
     <% end %>
     <%= yield %>
+    <!-- Scripts-->
+    <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/custom/popper.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
+    <script src="assets/js/custom/plugins.min.js"></script>
+    <script src="assets/js/custom/custom.min.js"></script>
+
   </body>
 </html>
